parser/tests/cases/snapshots/cases__parse_ast__empty_struct_def.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(empty_struct_def), types::parse_struct_def,\n           r#\"struct S:\n  pass\n\"#)"

---
Node(
  kind: Struct(
    name: Node(
      kind: "S",
      span: Span(
        start: 7,
        end: 8,
      ),
    ),
    fields: [],
  ),
  span: Span(
    start: 0,
    end: 8,
  ),
)
