parser/tests/cases/snapshots/cases__parse_ast__type_generic.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_generic), types::parse_type_desc,\n           \"foo<a, b<c>, d[10]>\")"

---
Node(
  kind: Generic(
    base: Node(
      kind: "foo",
      span: Span(
        start: 0,
        end: 3,
      ),
    ),
    args: [
      Node(
        kind: TypeDesc(Base(
          base: "a",
        )),
        span: Span(
          start: 4,
          end: 5,
        ),
      ),
      Node(
        kind: TypeDesc(Generic(
          base: Node(
            kind: "b",
            span: Span(
              start: 7,
              end: 8,
            ),
          ),
          args: [
            Node(
              kind: TypeDesc(Base(
                base: "c",
              )),
              span: Span(
                start: 9,
                end: 10,
              ),
            ),
          ],
        )),
        span: Span(
          start: 7,
          end: 11,
        ),
      ),
      Node(
        kind: TypeDesc(Array(
          typ: Node(
            kind: Base(
              base: "d",
            ),
            span: Span(
              start: 13,
              end: 14,
            ),
          ),
          dimension: 10,
        )),
        span: Span(
          start: 13,
          end: 18,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 19,
  ),
)
