parser/tests/cases/snapshots/cases__parse_ast__type_map3.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_map3), types::parse_type_desc,\n           \"map<address, map<u8, map<u8, u8>>>\")"

---
Node(
  kind: Generic(
    base: Node(
      kind: "map",
      span: Span(
        start: 0,
        end: 3,
      ),
    ),
    args: [
      Node(
        kind: TypeDesc(Base(
          base: "address",
        )),
        span: Span(
          start: 4,
          end: 11,
        ),
      ),
      Node(
        kind: TypeDesc(Generic(
          base: Node(
            kind: "map",
            span: Span(
              start: 13,
              end: 16,
            ),
          ),
          args: [
            Node(
              kind: TypeDesc(Base(
                base: "u8",
              )),
              span: Span(
                start: 17,
                end: 19,
              ),
            ),
            Node(
              kind: TypeDesc(Generic(
                base: Node(
                  kind: "map",
                  span: Span(
                    start: 21,
                    end: 24,
                  ),
                ),
                args: [
                  Node(
                    kind: TypeDesc(Base(
                      base: "u8",
                    )),
                    span: Span(
                      start: 25,
                      end: 27,
                    ),
                  ),
                  Node(
                    kind: TypeDesc(Base(
                      base: "u8",
                    )),
                    span: Span(
                      start: 29,
                      end: 31,
                    ),
                  ),
                ],
              )),
              span: Span(
                start: 21,
                end: 32,
              ),
            ),
          ],
        )),
        span: Span(
          start: 13,
          end: 33,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 34,
  ),
)
