parser/tests/cases/snapshots/cases__parse_ast__type_string.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_string), types::parse_type_desc, \"string<100>\")"

---
Node(
  kind: Generic(
    base: Node(
      kind: "string",
      span: Span(
        start: 0,
        end: 6,
      ),
    ),
    args: [
      Node(
        kind: Int(100),
        span: Span(
          start: 7,
          end: 10,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 11,
  ),
)
